@@ -1,3 +1,7 @@
+2009-10-08  Adam Nemet  <anemet@caviumnetworks.com>
+
+	* gcc.target/mips/truncate-6.c: New test.
+
 2009-10-08  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/cpp0x/rv-deduce.C: New.
